5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/2360/executions/1643_2703.log
== TEST (2019-04-10 19:06:43) 
-- CODE:
idade =int(input("digite a idade: "))
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:08:36) 
-- CODE:
idade =int(input("digite a idade: "))
if (idade<18):
	mensagem = "nao_eleitor"
	else:
		(idade>18)
		mensagem = "eleitor"
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:09:34) 
-- CODE:
idade =int(input("digite a idade: "))
if (idade<18):
	mensagem = "nao_eleitor"
else:
	(idade>18)
	mensagem = "eleitor"
	print(mensagem)
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:09:46) 
-- CODE:
idade =int(input("digite a idade: "))
if (idade<18):
	mensagem = "nao_eleitor"
else:
	(idade>18)
	mensagem = "eleitor"
	print(mensagem)
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:09:49) 
-- CODE:
idade =int(input("digite a idade: "))
if (idade<18):
	mensagem = "nao_eleitor"
else:
	(idade>18)
	mensagem = "eleitor"
	print(mensagem)
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:09:52) 
-- CODE:
idade =int(input("digite a idade: "))
if (idade<18):
	mensagem = "nao_eleitor"
else:
	(idade>18)
	mensagem = "eleitor"
	print(mensagem)
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:10:05) 
-- CODE:
idade =int(input("digite a idade: "))
if (idade<18):
	mensagem = "nao_eleitor"
else:
	(idade>18)
	mensagem = "eleitor"
	print(mensagem)
-- EXECUTION TIME:
0.154338
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:

-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:10:37) 
-- CODE:
idade =int(input("digite a idade: "))
if (idade<18):
	mensagem = "nao_eleitor"
else:
	(idade>18)
	mensagem = "eleitor"
	print(mensagem)
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:10:49) 
-- CODE:
idade =int(input("digite a idade: "))
if (idade<18):
	mensagem = "nao_eleitor"
else:
	(idade>18)
	mensagem = "eleitor"
	print(mensagem)
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:11:31) 
-- CODE:
idade =int(input("digite a idade: "))
if (idade<18):
	mensagem = "nao_eleitor"
else:
	(idade>18)
	mensagem = "eleitor"
	print(mensagem)
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:12:05) 
-- CODE:
idade =int(input("digite a idade: "))
if (idade < 18):
	mensagem = "nao_eleitor"
else:
	(idade > 18)
	mensagem = "eleitor"
	print(mensagem)
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:12:15) 
-- CODE:
idade =int(input("digite a idade: "))
if (idade < 18):
	mensagem = "nao_eleitor"
else:
	(idade > 18)
	mensagem = "eleitor"
	print(mensagem)
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:12:17) 
-- CODE:
idade =int(input("digite a idade: "))
if (idade < 18):
	mensagem = "nao_eleitor"
else:
	(idade > 18)
	mensagem = "eleitor"
	print(mensagem)
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:12:38) 
-- CODE:
idade =int(input("digite a idade: "))
if :(idade < 18)
	mensagem = "nao_eleitor"
else:
	(idade > 18)
	mensagem = "eleitor"
	print(mensagem)
-- ERROR:
File "XXXX", line 2
    if :(idade < 18)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:13:14) 
-- CODE:
idade =int(input("digite a idade: "))
if (idade < 18):
	mensagem = "nao_eleitor"
else:
	(idade > 18)
	mensagem = "eleitor"
	print(mensagem)
-- ERROR:
File "XXXX", line 2
    if :(idade < 18)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:14:52) 
-- CODE:
idade =int(input("digite a idade: "))
if (idade > 18):
	mensagem = "eleitor"
else:
	(idade < 18)
	mensagem = "nao_eleitor"
	
	print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:14:56) 
-- CODE:
idade =int(input("digite a idade: "))
if (idade > 18):
	mensagem = "eleitor"
else:
	(idade < 18)
	mensagem = "nao_eleitor"
	
	print(mensagem)
-- EXECUTION TIME:
0.141024
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:

-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:15:15) 
-- CODE:
idade =int(input("digite a idade: "))
if (idade > 18):
	mensagem = "eleitor"
else:
	(idade < 18)
	mensagem = "nao_eleitor"
	
	print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:16:11) 
-- CODE:
idade =int(input("digite a idade: "))
if (idade > 18):
	mensagem = "eleitor"
else:
	(idade < 18)
	mensagem = "nao_eleitor"
	
	print(mensagem)
-- EXECUTION TIME:
0.160945
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:

-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:16:16) 
-- CODE:
idade =int(input("digite a idade: "))
if (idade > 18):
	mensagem = "eleitor"
else:
	(idade < 18)
	mensagem = "nao_eleitor"
	
	print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:16:55) 
-- CODE:
idade =int(input("digite a idade: "))
if (idade >= 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
	
	print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:17:00) 
-- CODE:
idade =int(input("digite a idade: "))
if (idade >= 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
	
	print(mensagem)
-- EXECUTION TIME:
0.122224
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:

-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:17:36) 
-- CODE:
idade =int(input("digite a idade: "))
if (idade >= 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
	
	print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:18:08) 
-- CODE:
idade =int(input("digite a idade: "))
if (idade >= 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
	
	print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:18:57) 
-- CODE:
idade =int(input("digite a idade: "))

if (idade >= 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
	
	print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:19:18) 
-- CODE:
idade =int(input("digite a idade: "))

if (idade >= 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
	
print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:19:25) 
-- CODE:
idade =int(input("digite a idade: "))

if (idade >= 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
	
print(mensagem)
-- EXECUTION TIME:
0.109162
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
